--- a/src/main/resources/templates/etiqueta-adicionar.html
+++ b/src/main/resources/templates/etiqueta-adicionar.html
@@ -5,14 +5,14 @@
     <meta charset="UTF-8" />
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
     <meta name="viewport" content="width=device-width" />
-    <title>Posts</title>
+    <title>Nova Etiqueta</title>
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
     </link>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 </head>
 
 <body>
-    <html>Atividade: Nova
+    <html>Etiqueta: Nova
 
     </html>
     <form th:action="@{/etiqueta/nova.html}" th:object="${etiqueta}" method="POST">
