Página Principal - Home

--- a/src/main/resources/templates/etiqueta-index.html
+++ b/src/main/resources/templates/etiqueta-index.html
@@ -11,6 +11,12 @@
             <li><a th:href="@{./nova.html}">Criar</a></li>
             <li><a th:href="@{./listar.html}">Listar</a></li>
         </ul>
+
+        <div>
+            <form th:action="@{/index.html}">
+                <input type="submit" value="Home" />
+            </form>
+        </div>
     </body>
     </html>
     <div>
