--- a/src/main/resources/templates/lista-etiquetas.html
+++ b/src/main/resources/templates/lista-etiquetas.html
@@ -45,7 +45,7 @@
             </table>
             <div>
             <form th:action="@{/etiqueta/index.html}">
-                <input type="submit" value="Home" />
+                <input type="submit" value="Home Etiqueta" />
             </form>
         </div>
         </div>
