--- a/src/main/resources/templates/etiqueta-adicionar.html
+++ b/src/main/resources/templates/etiqueta-adicionar.html
@@ -25,7 +25,7 @@
         <strong th:if="${#fields.hasErrors('descricaoTextual')}"
         th:errors="*{descricaoTextual}"></strong>
         
-        <label>Descrição Textual: <input type="text"
+        <label>URL: <input type="text"
             th:field="*{url}"/></label>
             <strong th:if="${#fields.hasErrors('url')}"
             th:errors="*{url}"></strong>
