Link para Usuario Home

--- a/src/main/resources/templates/home-index.html
+++ b/src/main/resources/templates/home-index.html
@@ -9,6 +9,7 @@
         <h1>Biblioteca Nacional</h1>
         <ul>
             <li><a th:href="@{./etiqueta/index.html}">Etiqueta</a></li>
+            <li><a th:href="@{./usuario/index.html}">Usuario</a></li>
         </ul>
         
     </body>
