Refatoração Usuário Home

--- a/src/main/resources/templates/usuario-index.html
+++ b/src/main/resources/templates/usuario-index.html
@@ -8,8 +8,8 @@
     <body>
         <h1>Usuário: index</h1>
         <ul>
-            <li><a th:href="@{./nova.html}">Criar</a></li>
-            <li><a th:href="@{./listar.html}">Listar</a></li>
+            <li><a th:href="@{/usuario/nova.html}">Criar</a></li>
+            <li><a th:href="@{/usuario/listar.html}">Listar</a></li>
         </ul>
 
         <div>
