Listar e Adicionar - Item

--- a/src/main/resources/templates/home-index.html
+++ b/src/main/resources/templates/home-index.html
@@ -10,6 +10,8 @@
         <ul>
             <li><a th:href="@{./etiqueta/index.html}">Etiqueta</a></li>
             <li><a th:href="@{./usuario/index.html}">Usuario</a></li>
+            <li><a th:href="@{./item/index.html}">Item</a></li>
+
         </ul>
         
     </body>
