Editar e Excluir Item

--- a/src/main/resources/templates/usuario-index.html
+++ b/src/main/resources/templates/usuario-index.html
@@ -3,7 +3,7 @@
     <html lang="pt" xmlns:th="http://www.thymeleaf.org">
     <head>
         <meta charset="UTF-8">
-        <title> Usurio: index</title>
+        <title> Usuário: index</title>
     </head>
     <body>
         <h1>Usuário: index</h1>
