--- a/src/main/resources/templates/home-index.html
+++ b/src/main/resources/templates/home-index.html
@@ -6,7 +6,7 @@
         <title> Página Principal</title>
     </head>
     <body>
-        <h1>Biblioteca Nacional</h1>
+        <h1>Acervo Institucional</h1>
         <ul>
             <li><a th:href="@{./etiqueta/index.html}">Etiqueta</a></li>
             <li><a th:href="@{./usuario/index.html}">Usuario</a></li>
