Telas para desenvolvimento

--- a/src/main/resources/templates/home-index.html
+++ b/src/main/resources/templates/home-index.html
@@ -11,7 +11,7 @@
             <li><a th:href="@{./etiqueta/index.html}">Etiqueta</a></li>
             <li><a th:href="@{./usuario/index.html}">Usuario</a></li>
             <li><a th:href="@{./item/index.html}">Item</a></li>
-
+            <li><a th:href="@{./vinculo/index.html}">Vínculo entre Itens</a></li>
         </ul>
         
     </body>
