--- a/src/main/resources/templates/vinculo-index.html
+++ b/src/main/resources/templates/vinculo-index.html
@@ -10,41 +10,37 @@
     <h1>Vínculo entre Itens</h1>
 
     <div>
-
-        <form>
-            <label>Item Origem: <select name="origem">
-                    <option th:each="item: ${itens}" th:object="${item}" th:value="*{key}" th:text="*{key+': '+value}"
-                        th:selected="${min==opcao.key}"></option>
-                </select></label>
-
-            <label>Item Destino: <select name="destino">
-                    <option th:each="item: ${itens}" th:object="${item}" th:value="*{key}" th:text="*{key+': '+value}"
-                        th:selected="${max==opcao.key}"></option>
-                </select></label>
-            <input type="submit" value="Criar Vínculo" />
-        </form>
-        <h1>Lista de Vínculo entre Itens</h1>
-        <table>
-            <thead>
-                <tr>
-                    <th>Id</th>
-                    <th>Item Origem</th>
-                    <th>Item Destino</th>
-                </tr>
-            </thead>
-            <tbody>
-                <tr th:each="vinculo: ${vinculos}" th:object="${vinculo}">
-                    <td th:text="*{id}"></td>
-                    <td th:text="*{}"></td>
-                    <td th:text="*{}"></td>
-                    <td><a th:href="@{/vinculo/editar.html(id=${vinculo.id})}">
-                            <button>Editar</button></a></td>
-                    <td><a th:href="@{/vinculo/excluir.html(id=${vinculo.id})}">
-                            <button>Excluir</button></a></td>
-                </tr>
-            </tbody>
-        </table>
-
+        <c:choose>
+            <c:when test="${naoPossuiVinculo}">
+                    <h2>O item não possui vinculos</h2>
+                    <a th:href="@{/vinculo/criar.html(id=${vinculo.id})}">
+                    <button>Editar</button></a>
+            </c:when>
+            <c:otherwise>
+                <h1>Lista de Vínculo entre Itens</h1>
+                <table>
+                    <thead>
+                        <tr>
+                            <th>Id</th>
+                            <th>Item Origem</th>
+                            <th>Item Destino</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr th:each="vinculo: ${vinculos}" th:object="${vinculo}">
+                            <td th:text="*{id}"></td>
+                            <td th:text="*{nomeItemOrigem}"></td>
+                            <td th:text="*{nomeItemDestino}"></td>
+                            <td><a th:href="@{/vinculo/editar.html(id=${vinculo.id})}">
+                                    <button>Editar</button></a></td>
+                            <td><a th:href="@{/vinculo/excluir.html(id=${vinculo.id})}">
+                                    <button>Excluir</button></a></td>
+                        </tr>
+                    </tbody>
+                </table>
+            </c:otherwise>
+        </c:choose>
+    </div>
 </body>
 
 </html>
